# harness-rag-demo

./: .env.example  .gitignore  .gitmodules  PLAN.md  README.md  pyproject.toml
config/: pricing.json
demo/: __init__.py  build_corpus.py  config.py  corpus.py  harness_synthesis.py  harness_tools.py  main.py  models.py  questions.py  retrieval_policy.py  security.py  service.py  telemetry.py
demo/runners/: __init__.py  base.py  gpt4o.py  harness1.py  replay.py
docs/: BREV.md  DGX.md  EVENT_DAY.md  REMOTE_INFERENCE.md
docs/design/: VISUAL_QA.md
fixtures/: questions.json
fixtures/replays/: README.md  bcplus-100-gpt4o.jsonl  bcplus-100-harness1.jsonl  bcplus-1023-gpt4o.jsonl  bcplus-1023-harness1.jsonl  bcplus-1046-gpt4o.jsonl  bcplus-1046-harness1.jsonl  bcplus-1068-gpt4o.jsonl  bcplus-1068-harness1.jsonl
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ActionTrajectory.tsx  HarnessState.test.tsx  HarnessState.tsx  MetricsStrip.test.tsx  MetricsStrip.tsx
scripts/: build_corpus.sh  demo.sh  generate_seed_replays.py  prevalidate_demo.py
scripts/brev/: deploy.sh  health.sh  remote_setup.sh  tunnel.sh
scripts/dgx/: deploy.sh  health.sh  logs.sh  smoke.sh  start.sh  stop.sh  tunnel.sh
scripts/remote/: common.sh  deploy.sh  health.sh  logs.sh  smoke.sh  start.sh  stop.sh  tunnel.sh
tests/: test_api.py  test_corpus.py  test_public_config.py  test_retrieval_policy.py  test_security.py  test_service.py  test_telemetry.py
