[project]
name = "harness-rag-demo"
version = "0.1.0"
description = "Live Harness-1 state visualization demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openai>=2.6,<3",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.6,<3",
  "sse-starlette>=2.2,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
