[project]
name = "harness-rag-demo"
version = "0.1.0"
description = "Live Harness-1 state visualization demo"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.72,<1",
  "baseten-performance-client>=0.0.12",
  "chz>=0.4,<1",
  "chromadb==1.4.0",
  "datasets>=4.3,<5",
  "fastapi>=0.115,<1",
  "huggingface-hub>=0.30,<1",
  "httpx>=0.27,<1",
  "json-repair>=0.55,<1",
  "numpy>=2,<3",
  "openai>=2.6,<3",
  "openai-harmony>=0.0.8",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.6,<3",
  "rank-bm25>=0.2.2,<1",
  "requests>=2.32,<3",
  "sse-starlette>=2.2,<3",
  "structlog>=25.5,<26",
  "tinker>=0.9,<1",
  "tinker-cookbook",
  "tiktoken>=0.12,<1",
  "uvicorn[standard]>=0.34,<1",
]

[tool.uv.sources]
tinker-cookbook = { path = "vendor/harness-1/tinker-cookbook", editable = true }

[tool.uv]
override-dependencies = [
  "pysqlite3-binary; sys_platform != 'darwin'",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1,<2",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
